Fix some layout issues with toolbar buttons

--- a/components/com_jce/editor/tiny_mce/themes/advanced/skins/default/src/button.css
+++ b/components/com_jce/editor/tiny_mce/themes/advanced/skins/default/src/button.css
@@ -19,6 +19,12 @@
     line-height: 1;
 }
 
+.mceDefaultSkin .mceButton .mceIcon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .mceDefaultSkin .mceButton:hover {
     border: 1px solid #ccc;
     background-color: #fafafa;
