--- a/components/com_jce/editor/tiny_mce/themes/advanced/skins/modern/ui.css
+++ b/components/com_jce/editor/tiny_mce/themes/advanced/skins/modern/ui.css
@@ -27,7 +27,6 @@
     line-height: 1;
     text-align: center;
     min-width: 1em;
-    display: inline-block;
     background: none;
 }
 
